--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
 		<dependency>
 			<groupId>de.yourinspiration</groupId>
 			<artifactId>jexpresso</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>0.0.1-RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
