complete redesign and refactoring for version 1.0.0

--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,11 @@
 
 	<groupId>de.yourinspiration</groupId>
 	<artifactId>jexpresso-static-resources</artifactId>
-	<version>1.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>jar</packaging>
 
 	<name>jexpresso-static-resources</name>
+	<description>A middleware component to serve static files for JExpresso web framework</description>
 	<url>https://github.com/Yourinspiration/jexpresso-static-resources</url>
 
 	<properties>
@@ -15,15 +16,9 @@
 	</properties>
 
 	<distributionManagement>
-		<repository>
-			<id>yourinspiration</id>
-			<name>Internal Releases</name>
-			<url>http://nexus.yourinspiration.de/nexus/content/repositories/releases/</url>
-		</repository>
 		<snapshotRepository>
-			<id>yourinspiration</id>
-			<name>Internal Snapshots</name>
-			<url>http://nexus.yourinspiration.de/nexus/content/repositories/snapshots/</url>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
 		</snapshotRepository>
 	</distributionManagement>
 
@@ -50,12 +45,19 @@
 
 	<licenses>
 		<license>
-			<name>Apache License, Version 2.0</name>
+			<name>The Apache Software License, Version 2.0</name>
 			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-			<distribution>repo</distribution>
-			<comments>A business-friendly OSS license</comments>
 		</license>
 	</licenses>
+
+	<developers>
+		<developer>
+			<name>Marcel Härle</name>
+			<email>haerle@marcel-haerle.de</email>
+			<organization>Yourinspiration</organization>
+			<organizationUrl>http://yourinspiration.de</organizationUrl>
+		</developer>
+	</developers>
 
 	<organization>
 		<name>Yourinspiration</name>
@@ -72,7 +74,7 @@
 		<dependency>
 			<groupId>de.yourinspiration</groupId>
 			<artifactId>jexpresso</artifactId>
-			<version>1.0.0-RELEASE</version>
+			<version>1.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
@@ -86,23 +88,68 @@
 		</dependency>
 	</dependencies>
 
+	<profiles>
+		<profile>
+			<id>release</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-source-plugin</artifactId>
+						<version>2.2.1</version>
+						<executions>
+							<execution>
+								<id>attach-sources</id>
+								<goals>
+									<goal>jar-no-fork</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-javadoc-plugin</artifactId>
+						<version>2.9.1</version>
+						<executions>
+							<execution>
+								<id>attach-javadocs</id>
+								<goals>
+									<goal>jar</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+						<version>1.5</version>
+						<executions>
+							<execution>
+								<id>sign-artifacts</id>
+								<phase>verify</phase>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.sonatype.plugins</groupId>
+						<artifactId>nexus-staging-maven-plugin</artifactId>
+						<version>1.6.2</version>
+						<extensions>true</extensions>
+						<configuration>
+							<serverId>ossrh</serverId>
+							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+							<autoReleaseAfterClose>true</autoReleaseAfterClose>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+
 	<build>
-		<resources>
-			<resource>
-				<filtering>false</filtering>
-				<directory>src/main/resources</directory>
-			</resource>
-			<resource>
-				<filtering>false</filtering>
-				<directory>src/main/java</directory>
-				<includes>
-					<include>**</include>
-				</includes>
-				<excludes>
-					<exclude>**/*.java</exclude>
-				</excludes>
-			</resource>
-		</resources>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
